# break-reminder-pro

./: BREAK_REMINDER_PRO_PRD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  WINDOWS_STORE_DESCRIPTION.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: README_UPDATE_SYSTEM.md  RELEASE_GUIDE.md  TODO.md
src/: force_break.html  index.html  main.js  meeting_notification.html  notify.html  pre_break.html  settings.html  settings.js  styles.css  test.html  update_notification.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window_manager.rs
src/shared/: debug-utils.js  settings.js  styles.css  timer.js  ui-utils.js  update-manager.js  window-utils.js
