[package]
name = "break-reminder-pro-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "break_reminder_pro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-store = "2"
tauri-plugin-autostart = "2"

# For media control
enigo = "0.1"
# For meeting detection
sysinfo = "0.30"

# Development profile: faster compilation with some optimizations
[profile.dev]
opt-level = 1          # Some optimization for speed
debug = true           # Keep debug info
split-debuginfo = "unpacked"  # Faster on Windows
incremental = true     # Enable incremental compilation

# Fast development profile: maximum compilation speed
[profile.dev-fast]
inherits = "dev"
opt-level = 0          # No optimization for maximum compilation speed
debug = "limited"      # Minimal debug info

# Optimized dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev-fast.package."*"]
opt-level = 3
debug = false

